[package]
name = "clickdown-cli"
version = "0.1.0"
description = "CLI application to interface with ClickUP APIs."
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
colored = "3.1.1"
comfy-table = "7.2.2"
inquire = { version = "0.9.4", features = ["editor"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
